[Edit] service createhistory

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_NAME=AplikasiPencatatPembelian
 LOG_PATH =./source/log/log
 LOG_LEVEL=info
 
+TZ=Asia/Jakarta
+
 DB_NAME=smm
 DB_PORT=3306
 DB_USERNAME=root
