--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "description": "",
   "dependencies": {
     "bunyan": "^1.8.12",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.28",
     "mysql2": "^2.1.0",
-    "nodemon": "^2.0.2",
-    "sequelize": "^5.21.5",
-    "sequelize-mysql-timestamp": "^1.4.0"
+    "sequelize": "^5.21.5"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.2"
   }
 }
