--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "bunyan": "^1.8.12",
     "express": "^4.17.1",
+    "express-ws": "^4.0.0",
     "moment": "^2.24.0",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "websocket": "^1.0.31"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
