--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.24.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.5",
+    "socket.io": "^2.3.0",
     "websocket": "^1.0.31"
   },
   "devDependencies": {
