--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "bunyan": "^1.8.12",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
     "moment": "^2.24.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.5",
     "socket.io": "^2.3.0",
