--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ TZ=Asia/Jakarta
 DB_NAME=smm
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD=Teguh121@!
-DB_HOST=localhost
+DB_PASSWORD=@Qwerty123
+DB_HOST=80.211.230.155
 DB_TYPE=mysql
