[fix and add] fixed bug create log and add authen token

--- a/.env
+++ b/.env
@@ -6,10 +6,13 @@ LOG_LEVEL=info
 
 TZ=Asia/Jakarta
 
+SECRET_KEY=LASTDROP
+
 DB_NAME=smm
 DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=@qwerty123
+
 DB_HOST=80.211.230.155
-localhost
+
 DB_TYPE=mysql
