--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bunyan": "^1.8.12",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
