[DEPLOY-SERVER-RONNY]

--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ TZ=Asia/Jakarta
 
 SECRET_KEY=LASTDROP
 
-DB_NAME=last_drop
+DB_NAME=smm
 DB_PORT=3306
-DB_USERNAME=lastdrop
-DB_PASSWORD=SmmEnigma!
+DB_USERNAME=root
+DB_PASSWORD=@qwerty123
 
-DB_HOST=database-smm.coyki4bwbyte.ap-southeast-1.rds.amazonaws.com
+DB_HOST=80.211.230.155
 
 DB_TYPE=mysql
