--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "node-fetch": "^2.6.0",
     "sequelize": "^5.21.5",
     "socket.io": "^2.3.0",
     "websocket": "^1.0.31"
