--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "bunyan": "^1.8.12",
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
+    "html-pdf": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
-    "node-fetch": "^2.6.0",
     "sequelize": "^5.21.5",
     "socket.io": "^2.3.0",
-    "websocket": "^1.0.31"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
