[Edit env server ronny]

--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ SECRET_KEY=LASTDROP
 DB_NAME=smm
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD=Teguh121@!
+DB_PASSWORD=@qwerty123
 
-DB_HOST=localhost
+DB_HOST=80.211.230.155
 
 DB_TYPE=mysql
