[.env server ronny]

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ PATH_OS=/
 DB_NAME=smm
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD=@qwerty
+DB_PASSWORD=@qwerty123
 DB_HOST=80.211.230.155
 
 DB_TYPE=mysql
