--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ PATH_OS=/
 
 DB_NAME=smm
 DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=@qwerty123
-DB_HOST=80.211.230.155
+DB_USERNAME=lastdrop
+DB_PASSWORD=SmmEnigma!
+DB_HOST=database-smm.coyki4bwbyte.ap-southeast-1.rds.amazonaws.com
 
 DB_TYPE=mysql
