--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "node-rest-client": "^3.1.0",
+    "request-promise": "^4.2.5",
     "sequelize": "^5.21.5",
     "socket.io": "^2.3.0"
   },
