--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "bunyan": "^1.8.12",
     "ejs": "^3.0.2",
@@ -20,6 +21,7 @@
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "node-fetch": "^2.6.0",
     "node-rest-client": "^3.1.0",
     "request-promise": "^4.2.5",
     "sequelize": "^5.21.5",
